change project structure to make a php package

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,13 @@
             "email": "majid8911303@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=5.4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "mhndev\\message\\": "src/"
+        }
+    },
+    "minimum-stability": "dev"
 }
